--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
     </ul>
   </nav>
 
-  <h1>Welcome To Ironhacker's Page</h1>
+  <h1>J. Ramirez</h1>
 
   <section>
     <h2>Things I Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Bananen</li>
+      <li>Apfel</li>
+      <li>Mandel</li>
     </ul>
   </section>
 
   <section>
     <h2>Things I Don't Like</h2>
     <ul>
-      <li>Fill</li>
-      <li>This</li>
-      <li>In</li>
+      <li>Milch</li>
+      <li>Fleisch</li>
+      <li>Seafood</li>
     </ul>
   </section>
 </body>
